Fixed a bunch of stuff. See email on Sep 22

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:id="@+id/lockScreenWindow"
     >
+
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -17,5 +18,13 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/ic_action_cancel"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:id="@+id/timeDisplay"
+        android:textColor="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
